# floyd-datafile

./: .gitignore  README.md  floyd-datafile.g  floyd-escape-sequences.g  pyproject.toml  run
floyd/datafile/: __init__.py
src/floyd_datafile/: __init__.py  lib.py  parser.py  support.py  tool.py
subpackages/: pyfloyd
tests/: load_test.py  tool_test.py
