[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "floyd-datafile"
description = "A parser for the Floyd Data File file format"
authors = [
    {name = "Dirk Pranke", email = "dpranke@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
classifiers= [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dynamic = [ "version" ]

[project.optional-dependencies]
dev = [
    'build==1.2.1',
    'coverage==7.5.3',
    'mypy==1.10.0',
    'pip==24.1',
    'pylint==3.2.3',
    'ruff==0.5.1',
    'twine==5.1.1',
    'uv==0.2.13',
]

[project.urls]
Repository = "https://github.com/dpranke/floyd-datafile"
Issues = "https://github.com/dpranke/floyd-datafile/issues"
Changelog = "https://github.com/dpranke/floyd-datafile/blob/master/README.md"

[project.scripts]
fdf = "floyd.datafile.tool:main"

[tool.ruff]
include = [ "run", "*/*.py" ]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.setuptools]
packages = ["floyd-datafile"]
[tool.setuptools.dynamic]
version = {attr = "floyd.datafile.__version__"}
