[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "floyd-datafile"
description = "A parser for the Floyd Data File file format"
authors = [
    {name = "Dirk Pranke", email = "dpranke@gmail.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">= 3.9"
classifiers= [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dynamic = [ "version" ]

[project.optional-dependencies]
dev = [
    'build==1.2.2.post1',
    'coverage==7.8.0',
    'mypy==1.15.0',
    'pip==25.0.1',
    'pylint==3.3.6',
    'ruff==0.11.2',
    'twine==6.1.0',
    'uv==0.6.11',
    'typ @ file:///${PROJECT_ROOT}/subpackages/typ-dev',
    'pyfloyd @ file:///${PROJECT_ROOT}/subpackages/pyfloyd',
]

[project.urls]
Repository = "https://github.com/dpranke/floyd-datafile"
Issues = "https://github.com/dpranke/floyd-datafile/issues"
Changelog = "https://github.com/dpranke/floyd-datafile/blob/master/README.md"

[project.scripts]
fdf = "floyd_datafile:main"

[tool.ruff]
include = [ "run", "*/*.py" ]
line-length = 79

[tool.ruff.format]
quote-style = "single"

# [tool.setuptools]
# packages = ["floyd_datafile"]
#

[tool.setuptools.dynamic]
version = {attr = "floyd_datafile.__version__"}

[tool.uv.sources]
pyfloyd = { workspace = true }
typ = { workspace = true }

[tool.uv.workspace]
members = [ "subpackages/*" ]
